--- a/index.html
+++ b/index.html
@@ -1,16 +1,35 @@
 <html>
   <head>
     <style>
+        @import url('https://fonts.googleapis.com/css2?family=Lato:ital@0;1&display=swap');
+
         html {
-            background-color: rgb(235, 235, 235);
+            background-color: white;
         }
         .p5Canvas {
             z-index: -1;
         }
+        body{
+          text-align: center;
+          font-family: 'Lato', sans-serif;
+        }
+        main{
+          position: relative;
+        }
+        a:visited{
+          color: grey;
+        }
+        em{
+          font-style: italic;
+        }
     </style>
   </head>
 
-  <body></body>
+  <body>
+    <h1>Recoding</h1>
+    <p>Based on the original artwork by Georg Nees, <a target="_blank" href="http://dada.compart-bremen.de/item/artwork/639"><em>23 Ecke</em></a></p>
+    <em>Group: Emma Veauvy, Grégoire Tinnes</em>
+  </body>
 
   <script src = "./lib/dat.gui.min.js"></script>
   <script src = "./lib/p5.min.js"></script>
