--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <h1>Recoding</h1>
-    <p>Based on the original artwork by Georg Nees, <a target="_blank" href="http://dada.compart-bremen.de/item/artwork/639"><em>23 Ecke</em></a></p>
+    <p>Based on the original artwork by Georg Nees, <a target="_blank" href="http://dada.compart-bremen.de/item/artwork/639"><em>23-Ecke</em></a></p>
     <em>Group: Emma Veauvy, Grégoire Tinnes</em>
   </body>
 
