--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
         html {
             background-color: white;
+            scroll-behavior: smooth;
         }
         .p5Canvas {
             z-index: -1;
@@ -22,6 +23,12 @@
         em{
           font-style: italic;
         }
+        .button{
+          color: black;
+          width: 25px;
+          height: 25px;
+          margin-bottom: 10px;
+        }
     </style>
   </head>
 
@@ -29,6 +36,10 @@
     <h1>Recoding</h1>
     <p>Based on the original artwork by Georg Nees, <a target="_blank" href="http://dada.compart-bremen.de/item/artwork/639"><em>23-Ecke</em></a></p>
     <em>Group: Emma Veauvy, Grégoire Tinnes</em>
+    <p><a href="#defaultCanvas0">
+      <svg class="button" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512"><!--! Font Awesome Pro 6.1.1 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --><path d="M374.6 310.6l-160 160C208.4 476.9 200.2 480 192 480s-16.38-3.125-22.62-9.375l-160-160c-12.5-12.5-12.5-32.75 0-45.25s32.75-12.5 45.25 0L160 370.8V64c0-17.69 14.33-31.1 31.1-31.1S224 46.31 224 64v306.8l105.4-105.4c12.5-12.5 32.75-12.5 45.25 0S387.1 298.1 374.6 310.6z"/></svg>
+    </a></p>
+    
   </body>
 
   <script src = "./lib/dat.gui.min.js"></script>
